kubernetes/apps/network/envoy-gateway/gateway/gateway-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: network
spec:
  gatewayClassName: envoy-external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: ewatkins-dev-production-tls
            namespace: network
      allowedRoutes:
        namespaces:
          from: All
