kubernetes/apps/network/envoy-gateway/gateway/httproute-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
    - name: external
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
